Solved a problem when having two posts loaded on the same page (for example, when you have related postes appearing under the viewed where both of them have references, the references of the post from the related posts sections are loaded instead of the currently viewed post). In addition, solved the problem of a initial white space in the references custom field Text Area

--- a/public/css/webkew-wp-references-public.css
+++ b/public/css/webkew-wp-references-public.css
@@ -19,7 +19,7 @@
     padding-left: 2em;
     text-indent: -2em;
 }
-.csl-bib-body .highlight {
+.webkew_highlight {
     background-color: #7bc4ff;
 }
 
